--- a/leaveapp/templates/base.html
+++ b/leaveapp/templates/base.html
@@ -11,26 +11,10 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    {% load crispy_forms_tags %}
-    <h2 class="text-center mt-3 ">Leave Application Form</h2>
-    {% comment %} messages errors shown {% endcomment %}
-    {% if messages %}
-      <div class="text-center messages">
-        {% for message in messages %}
-          <div class="alert {% if message.tags == 'success' %}alert-success{% elif message.tags == 'error' %}alert-warning{% endif %}" role="alert">
-            <div class="list-group_item list-group-warning">{{ message }}</div>
-          </div>
-        {% endfor %}
-      </div>
-    {% endif %}
-    {% comment %} form container {% endcomment %}
-    <div class="container mt-5">
-    <form method="post" class="my-class">
-      {% csrf_token %}
-      {{ post_form|crispy }}
-    <button class="btn btn-primary">Submit</button>
-    </form>
-    </div>
+    {% block navbar %}
+    {% endblock navbar %}
+    {% block form %}
+    {% endblock form %}
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
