--- a/leaveapp/templates/login.html
+++ b/leaveapp/templates/login.html
@@ -4,23 +4,30 @@
 {% endblock navbar %}
 {% block form %}
 {% load crispy_forms_tags %}
-<h2 class="text-center mt-3 ">Leave Application Form</h2>
-{% comment %} messages errors shown {% endcomment %}
-{% if messages %}
-    <div class="text-center messages">
-    {% for message in messages %}
-        <div class="p-0 m-0 alert {% if message.tags == 'success' %}alert-success{% elif message.tags == 'error' %}alert-warning{% endif %}" role="alert">
-        <div class="font-italic">{{ message }}</div>
-        </div>
-    {% endfor %}
-    </div>
-{% endif %}
+
+
 {% comment %} form container {% endcomment %}
-    <div class="container mt-5">
-    <form method="post" class="my-class">
+<div class="form-custom shadow-lg login-container ">
+    <h3 class="text-center mb-2 ">Login</h3>
+    {% comment %} messages errors shown {% endcomment %}
+    {% if messages %}
+        <div class="text-center messages d-flex align-items-center justify-content-center ">
+        {% for message in messages %}
+            <div class="py-2 my-2 alert {% if message.tags == 'success' %}alert-success{% elif message.tags == 'error' %}alert-warning{% endif %}" role="alert">
+            {{ message }}
+            </div>
+        {% endfor %}
+        </div>
+    {% endif %}
+    <form method="post" class="d-flex flex-column ">
+
         {% csrf_token %}
-        {{ login_form|crispy }}
-    <button class="btn btn-primary">Submit</button>
+        <div class='d-flex flex-column'>
+            {{ login_form|crispy }}
+        </div>
+        
+    <button class="btn btn-primary mt-2">Submit</button>
     </form>
-    </div>
+</div>
+
 {% endblock form %}
