--- a/leaveapp/templates/navbar.html
+++ b/leaveapp/templates/navbar.html
@@ -1,23 +1,55 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light ">
-  <a class="navbar-brand" href="{% url 'leave_request' %}">LeaveForm</a>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'leave_request' %}">Form<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">History</a>
-      </li>
-      {% if request.user.is_authenticated %}
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'logout_user' %}">{{request.user.username}}|Logout</a>
-        </li>
-      {% else %}
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'login_user' %}">Login</a>
-        </li>
-      {% endif %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="{% static 'styles/style.css' %}">
+</head>
+<body>
+  
+<nav class="navbar navbar-expand-lg navbar-dark p-0 m-0 d-flex justify-content-between align-items-center ">
 
+  <a class="text-white my-1 mx-5" href="{% url 'leave_request' %}">
+  <img class='w-50 ms-5' src="{% static 'images/logo_main_light.svg' %}">
+  </a>
+
+  <div class="me-5" id="navbarTogglerDemo02">
+    <ul class="navbar-nav me-5 mt-2 mt-lg-0 ">
+      <li class="nav-item me-4 ">
+        <a class="nav-link text-light" href="#">History</a>
+      </li>
+
+      {% if request.user.is_authenticated %}
+        <div class="dropdown show">
+          <a class="nav-link text-light dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{request.user.username}}
+          </a>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="{% url 'logout_user' %}">Logout</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </div>
+      {% else %}
+        <div class="dropdown show">
+          <a class="nav-link text-light dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Login/Register
+          </a>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="{% url 'login_user' %}">Login</a>
+            <a class="dropdown-item" href="#">Register</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </div>
+      {% endif %}
     </ul>
   </div>
+  
+  
 </nav>
+
+
+
+</body>
+</html>
