FEAT:Implement edit and delete functionality in history view

--- a/leaveapp/templates/base.html
+++ b/leaveapp/templates/base.html
@@ -15,6 +15,12 @@
     {% endblock navbar %}
     {% block form %}
     {% endblock form %}
+    {% block history %}
+    {% endblock history %}
+    {% block edit_form %}
+    {% endblock edit_form %}
+    {% block content %}
+    {% endblock content %}
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
