--- a/leaveapp/templates/navbar.html
+++ b/leaveapp/templates/navbar.html
@@ -17,7 +17,7 @@
   <div class="me-5" id="navbarTogglerDemo02">
     <ul class="navbar-nav me-5 mt-2 mt-lg-0 ">
       <li class="nav-item me-4 ">
-        <a class="nav-link text-light" href="#">History</a>
+        <a class="nav-link text-light" href="{% url 'history' %}">History</a>
       </li>
 
       {% if request.user.is_authenticated %}
