--- a/leaveapp/templates/navbar.html
+++ b/leaveapp/templates/navbar.html
@@ -38,7 +38,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             <a class="dropdown-item" href="{% url 'login_user' %}">Login</a>
-            <a class="dropdown-item" href="#">Register</a>
+            <a class="dropdown-item" href="{% url 'register_user' %}">Register</a>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </div>
