--- a/leaveapp/templates/edit_form.html
+++ b/leaveapp/templates/edit_form.html
@@ -14,7 +14,7 @@
         <div class=" w-100">
              {{ edit_form | crispy }}
         </div>
-       <div class=>
+       <div>
             <button class="btn btn-primary my-2 " name='edit'>Edit</button>
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Delete</button>
