--- a/leaveapp/templates/register.html
+++ b/leaveapp/templates/register.html
@@ -6,7 +6,7 @@
 {% load crispy_forms_tags %}
 
 <div class="container form-custom mt-5 shadow-lg p-5 form-container">
-<h3 class="text-center  ">Register Form</h3>
+<h3 class="text-center  ">Register Form <i class="bi bi-pencil-square"></i></h3>
 {% comment %} messages errors shown {% endcomment %}
 {% if messages %}
     <div class="text-center messages">
@@ -16,18 +16,18 @@
         </div>
     {% endfor %}
     </div>
+
 {% endif %}
 {% comment %} form container {% endcomment %}
-<form method="post" class="">
+<form method="post" id='register-form'>
     {% csrf_token %}
     {{ register_form|crispy }}
-    <button class="btn btn-primary mt-2">Submit</button>
+    <button id="submit-btn" class="btn btn-primary mt-2">Submit</button>
+    <a href="{% url 'login_user' %}" class="btn btn-primary mt-2">Login</a>
 </form>
+    
 </div>
 {% endblock form %}
-
-
-
 
 
 {% comment %} register form alternative using bootstrap {% endcomment %}
