FIX: Minor changes

--- a/leaveapp/templates/form.html
+++ b/leaveapp/templates/form.html
@@ -2,7 +2,7 @@
 {% block navbar %}
 {% include 'navbar.html' %}
 {% endblock navbar %}
-{% block form %}
+{% block content %}
 {% load crispy_forms_tags %}
 
 <div class="container form-custom mt-5 shadow-lg p-5 form-container">
@@ -28,4 +28,4 @@
     <button class="btn btn-primary mt-2">Submit</button>
 </form>
 </div>
-{% endblock form %}
+{% endblock content %}
