--- a/leaveapp/templates/edit_form.html
+++ b/leaveapp/templates/edit_form.html
@@ -3,7 +3,7 @@
 {% include 'navbar.html' %}
 {% endblock navbar %}
 
-{% block edit_form %}
+{% block content %}
 {% load crispy_forms_tags %}
 
 <div class="container form-custom mt-5 shadow-lg p-5 form-container">
@@ -16,35 +16,8 @@
         </div>
        <div>
             <button class="btn btn-primary my-2 " name='edit'>Edit</button>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Delete</button>
+          
        </div>
-        
-
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Are you sure want to delete form applied on {{leave_request.leave_applied_date}}?
-            </div>
-
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <a href="{% url 'delete_form' leave_request.id %}" class="btn btn-primary">Delete</a>
-            </div>
-
-            </div>
-        </div>
-        </div>
-                      
-        
     </form>
 </div>
-{% endblock edit_form %}
+{% endblock content %}
