--- a/leaveapp/templates/history.html
+++ b/leaveapp/templates/history.html
@@ -3,7 +3,7 @@
 {% include 'navbar.html' %}
 {% endblock navbar %}
 
-{% block history %}
+{% block content %}
 
 
 <div class="container form-custom mt-1 position-relative  p-0 form-container w-100">
@@ -34,7 +34,7 @@
     </thead>
     <tbody>
         {% for leave_request in leave_request_data %}
-        <tr > 
+        <tr> 
             <td class="">{{forloop.counter}}</td>
             <td class=" d-none d-md-block">{{leave_request.leave_from}}</td>
             <td class="">{{leave_request.leave_to}}</td>
@@ -43,8 +43,31 @@
             <td class="">{{leave_request.approved_by_hr}}</td>
             <td class="d-flex justify-content-around">
                 <a class="" href="{% url 'edit_form' leave_request.id %}"><i class="bi bi-pencil-square"></i></a>
-                <a class=" " href="{% url 'edit_form' leave_request.id %}"><i class="bi bi-trash3"></i></a>
-            </td>
+                  <!-- Button trigger modal -->
+                <a href='{% url 'edit_form' leave_request.id %}' data-toggle="modal" data-target="#exampleModal"><i class="bi bi-trash3"></i></a>
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure want to delete form applied on {{leave_request.leave_applied_date}}?
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <a href="{% url 'delete_form' leave_request.id %}" class="btn btn-primary">Delete</a>
+                    </div>
+
+                    </div>
+                    </div>
+                </div> 
+                </td>
             
         </tr>
         {% endfor %}
@@ -53,4 +76,4 @@
 </table>
 </div>
 </div>
-{% endblock history %}
+{% endblock content %}
