--- a/leaveapp/templates/navbar.html
+++ b/leaveapp/templates/navbar.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark p-0 m-0 d-flex justify-content-between align-items-center ">
 
-  <a class="text-white my-1 mx-5" href="{% url 'leave_request' %}">
+  <a class="text-white my-1 mx-5" href="{% url 'history' %}">
   <img class='w-50 ms-5' src="{% static 'images/logo_main_light.svg' %}">
   </a>
 
