--- a/leaveapp/templates/dashboard.html
+++ b/leaveapp/templates/dashboard.html
@@ -35,8 +35,8 @@
                 <td class="col-1">Leave Type</td>
                 <td class="col-1">Description</td>
                 <td class="col-1">Applied</td>
-                <td class="col-1"><i class="bi bi-check2-circle"></i> Supervisor</td>
-                <td class="col-1"><i class="bi bi-check2-circle"></i> HR</td>
+                <td class="col-1">Supervisor</td>
+                <td class="col-1">HR </td>
                 <td class="col-1">Action</td>
                 
             </tr>
