--- a/leaveapp/templates/navbar.html
+++ b/leaveapp/templates/navbar.html
@@ -2,14 +2,14 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark p-0 m-0 d-flex justify-content-between align-items-center ">
 
-  <a class="text-white my-1 mx-5" href="{% url 'history' %}">
+  <a class="text-white my-1 mx-5" href="{% url 'dashboard' %}">
   <img class='w-50 ms-5' src="{% static 'images/logo_main_light.svg' %}">
   </a>
 
   <div class="me-5" id="navbarTogglerDemo02">
     <ul class="navbar-nav me-5 mt-2 mt-lg-0 ">
       <li class="nav-item me-4 ">
-        <a class="nav-link text-light" href="{% url 'history' %}">History <i class="bi bi-clock-history"></i></a>
+        <a class="nav-link text-light" href="{% url 'dashboard' %}">Dashboard <i class="bi bi-speedometer2"></i></a>
       </li>
 
       {% if request.user.is_authenticated %}
