--- a/leaveapp/templates/dashboard.html
+++ b/leaveapp/templates/dashboard.html
@@ -32,7 +32,7 @@
                 <td class="col-1">From</td>
                 <td class="col-1">To</td>
                 <td class="col-1">Days</td>
-                <td class="col-1">Leave Type</td>
+                <td class="col-1">Type</td>
                 <td class="col-1">Description</td>
                 <td class="col-1">Applied</td>
                 <td class="col-1">Supervisor</td>
@@ -68,7 +68,13 @@
                         <i class="bi bi-ban"></i>
                     {% endif %}</td></td>
                 <td class="">
-                    <a class="pe-1" href="{% url 'edit_form' leave_request.id %}"><i class="bi bi-pencil-square"></i></a>
+                    {% if request.user.role == 'SUPERVISOR' %}
+                        <a class="pe-1" href="{% url 'edit_supervisor' leave_request.id %}"><i class="bi bi-pencil-square"></i></a>
+                    {% elif request.user.role == 'HR' %}
+                        <a class="pe-1" href="{% url 'edit_hr' leave_request.id %}"><i class="bi bi-pencil-square"></i></a>
+                    {% else %}
+                        <a class="pe-1" href="{% url 'edit_form' leave_request.id %}"><i class="bi bi-pencil-square"></i></a>
+                    {% endif %}
                     <!-- Button trigger modal -->
                     <a href='{% url 'edit_form' leave_request.id %}' data-toggle="modal" data-target="#exampleModal"><i class="bi bi-trash3"></i></a>
                     <!-- Modal -->
